force-app/main/default/objects/HAM_Hand_Raise_Portal_Notification__mdt/HAM_Hand_Raise_Portal_Notification__mdt.object-meta.xml
<CustomObject>
    <label>HAM Hand Raise Portal Notification</label>
    <pluralLabel>HAM Hand Raise Portal Notifications</pluralLabel>
</CustomObject>