force-app/main/default/objects/HAM_Hand_Raise_Portal_Notification__mdt/fields/Career_Center_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Career_Center_Recipients__c</fullName>
    <label>Career Center Recipients</label>
    <type>TextArea</type>
</CustomField>