force-app/main/default/objects/HAM_Hand_Raise_Portal_Notification__mdt/fields/Engagement_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Recipients__c</fullName>
    <label>Engagement Recipients</label>
    <type>TextArea</type>
</CustomField>