force-app/main/default/objects/HAM_Hand_Raise_Portal_Notification__mdt/fields/Primary_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Primary_Recipient__c</fullName>
    <description>14 Recipient that will receive all the notifications</description>
    <inlineHelpText>You can have 14 Recipient that will receive all the notifications</inlineHelpText>
    <label>Primary Recipient</label>
    <length>252</length>
    <required>true</required>
    <type>Text</type>
</CustomField>